add verion type to db and set  api needed and update swagger
